--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "silex/silex": "~1.1",
     "j7mbo/twitter-api-php": "dev-master",
     "twig/twig": "^1.23",
-    "symfony/twig-bridge": "^3.0"
+    "symfony/twig-bridge": "^3.0",
+    "leafo/scssphp": "~0.6.3"
   },
 
   "require-dev": {
