--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
   },
 
   "require-dev": {
-    "phpunit/phpunit": "3.7.*",
+    "phpunit/phpunit": "~4.5",
     "squizlabs/php_codesniffer": "1.*"
   }
 }
